Fixing word spacing

--- a/faq/faq.css
+++ b/faq/faq.css
@@ -6,10 +6,20 @@ body {
 .contain1 {
     display: flex;
     
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
+.content1 {
+    
+    text-align: justify;
+    padding: 5px;
+}
 
+.contain2 {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #e0e0db;
+}
 
 .gry {
     display: flex;
@@ -27,8 +37,8 @@ body {
 }
 
 .content2 {
-    background-color: #e0e0db;
-    
+    text-align: justify;
+    padding: 5px;
     
 }
 
@@ -89,6 +99,10 @@ body {
 }
 
 .para1 {
+    word-spacing: -3px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    line-height: 1.3;
     font-size: 20px;
     padding: 5px;
     
